--- a/JS/继承.md
+++ b/JS/继承.md
@@ -1,4 +1,204 @@
 # JavaScript继承的实现
 
-继承的实现基于原型链
+继承的实现基于原型链,[参考js从原型到原型链](JS/js从原型到原型链.md)
+
+下面聊一聊JS继承实现的几种方法：
+
+先定义一个父类Animal，有一个属性，一个实例方法，一个原型方法
+```js
+/** 初始化一个父类 **/
+// 定义一个动物类
+function Animal(name) {
+    // 属性
+    this.name = name || 'Animal';
+    // 实例方法
+    this.sleep = function () {
+        console.log(this.name + '正在睡觉！');
+    }
+}
+
+// 原型方法
+Animal.prototype.eat = function (food) {
+    console.log(this.name + '正在吃：' + food);
+};
+```
+### 1、原型链继承
+将父类的实例作为子类的原型`son.prototype = new father()`
+```js
+/** 1、原型链继承 - 将父类的实例作为子类的原型**/
+function Cat() {
+}
+
+Cat.prototype = new Animal();
+Cat.prototype.name = 'cat';
+
+var cat = new Cat();
+console.log(cat.name);              //cat
+cat.sleep();                        //cat正在睡觉！
+cat.eat('fish');                    //cat正在吃：fish
+console.log(cat instanceof Animal); //true
+console.log(cat instanceof Cat);    //true
+```
+特点：
+1. 非常纯粹的继承关系，实例是子类的实例，也是父类的实例
+2. 父类新增原型方法/原型属性，子类都能访问到
+3. 简单，易于实现
+
+缺点：
+1. 可以在Cat构造函数中，为Cat实例增加实例属性。如果要新增原型属性和方法，则必须放在`new Animal()`这样的语句之后执行不能放到构造器中
+2. 无法实现多继承
+3. 来自原型对象的引用属性是所有实例共享的
+4. 创建子类实例时，无法向父类构造函数传参
+
+### 2、构造函数继承
+使用父类的构造函数来增强子类实例，等于是复制父类的实例属性给子类（没用到原型）
+这里用到了`Animal.call(this);`，就是讲Animal的属性和方法等创建到了cat对象里面，但是Animal的原型方法不能创建到cat对象。
+
+```js
+/** 2、构造函数 **/
+function Cat(name) {
+    Animal.call(this);
+    this.name = name || 'Tom';
+}
+
+// Test Code
+var cat = new Cat();
+console.log(cat.name);              //Tom
+console.log(cat.sleep());           //Tom正在睡觉！
+console.log(cat instanceof Animal); // false
+console.log(cat instanceof Cat);    // true
+console.log(cat.eat('fish'));       //报错Uncaught TypeError: cat.eat is not a function
+```
+
+特点：
+1. 解决了1中，子类实例共享父类引用属性的问题
+2. 创建子类实例时，可以向父类传递参数
+3. 可以实现多继承（call多个父类对象）
+
+缺点：
+1. 实例并不是父类的实例，只是子类的实例
+2. 只能继承父类的实例属性和方法，不能继承原型属性/方法
+3. 无法实现函数复用，每个子类都有父类实例函数的副本，影响性能
+
+
+### 3、实例继承
+为父类实例添加新特性，作为子类实例返回
+
+```js
+/** 3、实例继承 **/
+function Cat(name) {
+    var instance = new Animal();
+    instance.name = name || 'Tom';
+    return instance;
+}
+
+// Test Code
+var cat = new Cat('jack');
+console.log(cat.name);              //jack
+console.log(cat.sleep());           //jack正在睡觉！
+console.log(cat.eat('fish'));       //jack正在吃：fish
+console.log(cat instanceof Animal); // true
+console.log(cat instanceof Cat); // false
+```
+
+特点：
+1. 不限制调用方式，不管是`new 子类()`还是`子类()`,返回的对象具有相同的效果
+
+缺点：
+1. 实例是父类的实例，不是子类的实例
+2. 不支持多继承
+
+### 4、拷贝继承
+这是没有什么特点，就是遍历对象，拷贝继承
+
+```js
+/** 4、拷贝继承 **/
+function Cat(name) {
+    var animal = new Animal();
+    for (var p in animal) {
+        Cat.prototype[p] = animal[p];
+    }
+    Cat.prototype.name = name || 'Tom';
+}
+
+// Test Code
+var cat = new Cat();
+console.log(cat.name);              //Tom
+console.log(cat.sleep());           //Tom正在睡觉！
+console.log(cat.eat('fish'));       //Tom正在吃：fish
+console.log(cat instanceof Animal); // false
+console.log(cat instanceof Cat); // true
+```
+
+特点：
+1. 支持多继承
+
+缺点：
+1. 效率较低，内存占用高（因为要拷贝父类的属性）
+2. 无法获取父类不可枚举的方法（不可枚举方法，不能使用for in 访问到）
+
+### 5、组合继承
+结合原型继承和构造函数继承两种方法，通过调用父类构造，继承父类的属性并保留传参的优点，然后通过将父类实例作为子类原型，实现函数复用。
+
+```js
+/** 5、组合继承 **/
+function Cat(name) {
+    Animal.call(this);
+    this.name = name || 'Tom';
+}
+
+Cat.prototype = new Animal();
+Cat.prototype.constructor = Cat;  //要修改函数的执行
+
+// Test Code
+var cat = new Cat();
+console.log(cat.name);              //Tom
+console.log(cat.sleep());           //Tom正在睡觉！
+console.log(cat.eat('fish'));       //Tom正在吃：fish
+console.log(cat instanceof Animal); // true
+console.log(cat instanceof Cat);    // true
+```
+
+特点：
+1. 弥补了方式2的缺陷，可以继承实例属性/方法，也可以继承原型属性/方法
+2. 既是子类的实例，也是父类的实例
+3. 不存在引用属性共享问题
+4. 可传参
+5. 函数可复用
+
+缺点：
+1. 调用了两次父类构造函数，生成了两份实例（子类实例将子类原型上的那份屏蔽了）
+
+### 6、寄生组合继承
+通过寄生方式，砍掉父类的实例属性，这样，在调用两次父类的构造的时候，就不会初始化两次实例方法/属性，避免的组合继承的缺点
+```js
+/** 6、寄生组合继承 **/
+function Cat(name) {
+    Animal.call(this);
+    this.name = name || 'Tom';
+}
+
+(function () {
+    // 创建一个没有实例方法的类
+    var Super = function () {
+    };
+    Super.prototype = Animal.prototype;
+    //将实例作为子类的原型
+    Cat.prototype = new Super();
+})();
+
+// Test Code
+var cat = new Cat();
+console.log(cat.name);              //Tom
+console.log(cat.sleep());           //Tom正在睡觉！
+console.log(cat.eat());             //Tom正在吃：fish
+console.log(cat instanceof Animal); // true
+console.log(cat instanceof Cat);    //true
+```
+
+完美方法，但是复杂。
+
+参考：[JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
+
+
 
