--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -87,7 +87,8 @@ null===Object  //false
 
 ### 非严格相等 `==`
 
-在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符 === 的比较方式。
+在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符
+=== 的比较方式。
 
 #### ![](/assets/==.png)
 
@@ -116,21 +117,22 @@ Number('')  // 0
 Number('a123')  //NaN
 ```
 
-| input | result |
-| :--- | :--- |
-| null | +0 |
-| undefined | NaN |
-| Boolean | +0 / 1 |
-| Number | 不转换 |
-| String |  |
-| Symbol | 报错 |
-| Object | ToNumber\(ToPrimitive\( input , Number\)\) |
+| input     | result                                     |
+|:----------|:-------------------------------------------|
+| null      | +0                                         |
+| undefined | NaN                                        |
+| Boolean   | +0 / 1                                     |
+| Number    | 不转换                                      |
+| String    |                                            |
+| Symbol    | 报错                                       |
+| Object    | ToNumber\(ToPrimitive\( input , Number\)\) |
 
 ### ToPrimitive\(\)
 
 关于隐式转换参考这篇文章：[js隐式装箱-ToPrimitive](https://sinaad.github.io/xfe/2016/04/15/ToPrimitive/)
 
-默认用法：ToPrimitive\(input \[, PreferredType\]\)，（ToPrimitive方法可被修改）
+默认用法：ToPrimitive\(input \[,
+PreferredType\]\)，（ToPrimitive方法可被修改）
 
 * 如果是Date求原值，则PreferredType是String，其他均为Number。
 * PreferredType是String，则先调用toString\(\)，结果不是原始值的话再调用valueOf\(\)，还不是原始值的话则抛出错误；
@@ -196,11 +198,12 @@ NaN
 * **多个数字和数字字符串混合运算时，跟操作数的位置有关**
 
 ```js
-console.log(2 + 1 + '3'); / /'33'
+console.log(2 + 1 + '3'); // '33'
 console.log('3' + 2 + 1); //'321'
 ```
 
-* **数字字符串之前存在数字中的正负号\(+/-\)时，会被转换成数字，同样，可以在数字前添加 ‘’，将数字转为字符串**
+* **数字字符串之前存在数字中的正负号\(+/-\)时，会被转换成数字，同样，可以在数字前添加
+  ‘’，将数字转为字符串**
 
 ```js
 console.log(typeof '3'); // string
@@ -230,8 +233,51 @@ console.log(s.pro + s);  //'undefinedhello'
 a.pro和s.pro都为undefined。给基本类型数据加属性不报错，但是引用的话返回undefined，10+undefined返回NaN，而undefined和string相加时转变成了字符串。
 
 
-
 ### A && B 与 A \|\| B
 
-**A && B** 与运算，会做boolean转换，当A为false时返回A的结果，当A为true时返回B的结果，
+**A && B**
+与运算，会做boolean转换，当A为false时返回A的结果，当A为true时返回B的结果，
 **A||B** 或运算，当A为true时返回A的结果，当A为false时返回B的结果。
+
+### instanceof运算符详解
+
+这里有一篇[博文](https://www.ibm.com/developerworks/cn/web/1306_jiangjj_jsinstanceof/index.html)，详细介绍的instanceof运算符的历史由来以及定义
+
+先说typeof运算符，判断数据类型，对于基本类型，返回基本类型，对于引用类型的，不管哪一种引用类型，都返回'object'
+
+instanceof 运算符通常用来判断一个实例是否属于某种类型，使用方法为`foo
+instanceof Foo`返回一个Boolean值
+因为这个原因，更多的时候在继承关系中，用来判断**实例是否属于一个父类型**。
+
+instanceof如何实现这样的功能，语言规范里面有详细的介绍，这里截取js表达的方式
+
+>```js
+>function instance_of(L, R) {//L 表示左表达式，R 表示右表达式
+     var O = R.prototype;// 取 R 的显示原型
+     L = L.__proto__;// 取 L 的隐式原型
+     while (true) {
+         if (L === null)
+             return false;
+         if (O === L)// 这里重点：当 O 严格等于 L 时，返回 true 
+             return true;
+         L = L.__proto__;
+     }
+ }
+>```
+
+由规范得到，instanceof将前面表达式的`__proto__`与后面的表达式的`prototype`进行严格相等`===`比较，
+如果相等返回true，如果不相等，则继续循环获取前面表达式的`__proto__`，直到 `Object.__proto__===null`为止返回false。
+
+![](/assets/prototype.jpg)
+
+```js
+console.log(Object instanceof Object);//true 
+console.log(Function instanceof Function);//true 
+console.log(Number instanceof Number);//false 
+console.log(String instanceof String);//false 
+
+console.log(Function instanceof Object);//true 
+
+console.log(Foo instanceof Function);//true 
+console.log(Foo instanceof Foo);//false
+```
