--- a/JS/继承.md
+++ b/JS/继承.md
@@ -198,6 +198,8 @@ console.log(cat instanceof Cat);    //true
 
 完美方法，但是复杂。
 
+在实际应用中。
+
 参考：[JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
 
 
