--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -71,7 +71,8 @@ let EventUtil = {
 
 ![](/assets/enevt-ie.png)
 
-### 事件类型![](/assets/eventType1.png)
+### 事件类型
+![](/assets/eventType1.png)
 
 这里面主要记住UI事件，大部分是window对象相关。
 
