--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -108,6 +108,41 @@
 **情况三**：一些在特定环境下使用的居中操作
 
 * 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行业元素。比如加上table和table-cell属性。
+
+**方法六：inline-block + vertical-align**
+```html
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style type="text/css">
+        .parent {
+            height: 500px;
+            background: #ccc;
+        }
+
+        .son {
+            display: inline-block;
+            background: #555555;
+            margin:auto;
+        }
+
+        .parent:after{
+            display: inline-block;
+            vertical-align: middle;
+            content: '';
+            height:100%;
+        }
+    </style>
+</head>
+<body>
+<div class="parent">
+    <div class="son">居中元素</div>
+</div>
+</body>
+</html>
+```
+
+
 * `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。
 
 ### 总结：
