--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -91,7 +91,7 @@ window对象有个name属性，该属性有个特征：即在一个窗口\(windo
 
 #### 2.3、通过window.postMessage跨域
 
-ES5新增的 postMessage\(\) 方法允许来自不同源的脚本采用异步方式进行有限的通信，可以实现跨文本档、多窗口、跨域消息传递.
+html5新增的 postMessage\(\) 方法允许来自不同源的脚本采用异步方式进行有限的通信，可以实现跨文本档、多窗口、跨域消息传递.
 
 语法: postMessage\(data,origin\)
 
