--- a/CSS/斜切角实现.md
+++ b/CSS/斜切角实现.md
@@ -3,7 +3,7 @@
 
 原文: https://www.w3cplus.com/css3/css-secrets/cutout-corners.html © w3cplus.com
 
-![](assets\deg.png.png)
+![](/assets\deg.png.png)
 
 ### 传统方法：使用border-weight，产生夹角形成三角形
 **优点**：实现原理简单易懂，起来也比较方便，浏览器兼容性也比较高
@@ -38,7 +38,7 @@ linear-gradient([ [ [ <angle> | to [top | bottom] || [left | right] ],]? <color-
 
 简单点来讲就是`<side-or-corner>`和`<angle>`这两个是描述方向的，任选其一，第一个比较通俗易懂，第二个角度值需要转换一下。
 这边有一张手绘图，方便里面理解一下
-![](assets\deg-tips.png)
+![](/assets\deg-tips.png)
 
 
 #### `radial-gradient()`介绍
@@ -48,7 +48,7 @@ linear-gradient([ [ [ <angle> | to [top | bottom] || [left | right] ],]? <color-
 
 ### 正题
 直接上代码
-![](assets\deg1.png)
+![](/assets\deg1.png)
 ```css
 <style type="text/css">
     .example1 {
@@ -74,16 +74,16 @@ linear-gradient([ [ [ <angle> | to [top | bottom] || [left | right] ],]? <color-
 例子中第一个函数，从45°角的垂直方向实现渐变，第一个渐变位置便是块元素的右下角，然后在垂直方向开始渐变，第一个颜色是纯色transparent，长度为25px长度，所以到25px之间这段距离的区域全部都是纯色，第二种颜色就是背景色，长度是0，所以除了刚刚25px内的纯色，其他的都是背景色填充，其实这个长度0-25任意一个值都可以，因为都在一个渐变色的区域内，如果大于25px，则会在纯色和背景色之间进行渐变。
 
 接下来为了比较准确的解释这个，用一个例子说明
-![](assets\deg-length.png)
+![](/assets\deg-length.png)
 
 * 如果想要文章开头的那种图片效果，渐变的长度应该为块元素高度除以根号2。
 * 还有一个坑就是想要对称的两个角或者对称的四个角都有这个切角效果，使用了`background-size: 51% 51% ;`,这个计算如果块元素高度为复数时，没有什么问题，但是为单数时，50%的计算会有小数，然后再计算之后约去小数部分，在元素高度小于2倍的渐变长度根号2倍时，导致中间部分会有一条缝。
-![](assets\deg2.png)
+![](/assets\deg2.png)
 *
 * 在使用中，注意适配浏览器，在原文中有说到
 * 如果能使用scss、sass、stylus等预编译器，可以将渐变函数写到预处理器中，颜色，长度设为变量，统一改变
 #### 几个常用的例子
-![](assets\deg-example.png)
+![](/assets\deg-example.png)
 代码地址：[github](https://github.com/Xia-Ao/FrontendDemo/blob/master/30-CSS/11-background/chamfered-corners.html)
 
 1. 四个斜切角，上面的例子
