--- a/CSS/斜切角实现.md
+++ b/CSS/斜切角实现.md
@@ -3,7 +3,7 @@
 
 原文: https://www.w3cplus.com/css3/css-secrets/cutout-corners.html © w3cplus.com
 
-![](../assets\deg.png.png)
+![](/assets\deg.png.png)
 
 ### 传统方法：使用border-weight，产生夹角形成三角形
 **优点**：实现原理简单易懂，起来也比较方便，浏览器兼容性也比较高
