--- a/CSS/斜切角实现.md
+++ b/CSS/斜切角实现.md
@@ -74,6 +74,7 @@ linear-gradient([ [ [ <angle> | to [top | bottom] || [left | right] ],]? <color-
 例子中第一个函数，从45°角的垂直方向实现渐变，第一个渐变位置便是块元素的右下角，然后在垂直方向开始渐变，第一个颜色是纯色transparent，长度为25px长度，所以到25px之间这段距离的区域全部都是纯色，第二种颜色就是背景色，长度是0，所以除了刚刚25px内的纯色，其他的都是背景色填充，其实这个长度0-25任意一个值都可以，因为都在一个渐变色的区域内，如果大于25px，则会在纯色和背景色之间进行渐变。
 
 接下来为了比较准确的解释这个，用一个例子说明
+<!-- ![](../assets/deg-length.png) -->
 ![](../assets/deg-length.png)
 
 * 如果想要文章开头的那种图片效果，渐变的长度应该为块元素高度除以根号2。
