--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -116,7 +116,7 @@ function sort(array) {
         let index = i;
 
         //从index前一位数开始比较比较，如果当前比较的数小于它的前一位，则将大的数后移一位
-        while (current < array[index - 1] && index >= 0) {
+        while (index > 0 && current < array[index - 1]) {
             array[index] = array[index - 1];
             index--;  //于此同时，下标也前移一位，继续下一次比较
         }
@@ -194,22 +194,16 @@ function sort(array) {
 //封装直接插入排序
 function dirSort(array, grap) {
     grap = arguments[1] ? grap : 1;  //如果grap传值了，则为grap传入的值，如果没有，则从1开始
-//        debugger;
-    for (let i = grap - 1, len = array.length; i < len; i++) { //直接从第grap-1个开始比较
-        let current = array[i];  //将这次要比较的值存储起来，作为这一轮循环里面的常量
-        let index = i;
-
-        //只比较分组内的最大步长间距的两个数，循环一次就跳出来
-        while (current < array[index - grap] && index >= 0) {
-            array[index] = array[index - grap];  //如果当前比较的数小于它的前一位，则将大的数后移一位
-            index -= grap;    //于此同时，下标也前移grap，继续下一次比较
+    //        debugger;
+    for (let i = grap - 1; i < array.length; i++) {　// 从步进值位置开始
+        let current = array[i];
+        let index = i - grap;  // 待比较元素下标
+        while (index >= 0 && current < array[index]) { // 当前元素比待比较元素还小
+            array[index + grap] = array[index];         // 将待比较元素后移grap位置
+            index -= grap;
         }
-
-
-        if (index !== i) {  //防止自己赋值给自己，
-            array[index] = current; //如果不是自己，则一定是之前后移空出来留给current的位置，插入进去
-            console.log(array)
-//                debugger
+        if (index + grap !== i) {
+            array[index + grap] = current;      // 此时index+grap表示待比较元素位置，因为之前已经-grap了，将当前值当如待比较元素位置
         }
     }
     return array;
