--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -79,9 +79,14 @@ null==Object  //false
 null===Object  //false
 ```
 
+### 空数组[]与空对象{}
+
 ```js
+[]==[]    //false
 []==![]  //true
 []==false  //true
+[]==0       //true
+[]===0      //false
 
 ![]  //false
 !{}  //false
@@ -96,9 +101,8 @@ null===Object  //false
 在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符
 === 的比较方式。
 
-#### ![](/assets/==.png)
+![](/assets/==.png)
 
-关于
 
 #### Object.is\(A,B\)
 
