--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -49,7 +49,16 @@ for(let value of 对象){ 在此执行代码}
 2.  `for...in`循环出的是key，`for...of`循环出的是value
 3. 注意，`for...of`是ES6新引入的特性。修复了ES5引入的`for...in`的不足
 4.  `for...of`不能循环普通的对象，需要通过和`Object.keys()`搭配使用
-5. `for...in`的不足在于作用于数组的`for-in`循环除了遍历数组元素以外,还会遍历自定义属性。`for...of`循环不会循环对象的key，只会循环出数组的value，因此`for...of`不能循环遍历普通对象,对普通对象的属性遍历推荐使用`for...in`
+5. `for...in`的不足在于作用于数组的`for-in`循环除了遍历数组元素以外,**还会遍历自定义属性**。`for...of`循环不会循环对象的key，只会循环出数组的value，因此`for...of`不能循环遍历普通对象,对普通对象的属性遍历推荐使用`for...in`
+```js
+var arr= [1,2,3]
+arr.name='jack'     
+for(var key in arr){
+    console.log(arr[key])
+}
+// 1 2 3 jack
+```
+
 
 #### 4、forEach 
 
