--- a/JS/正则表达式.md
+++ b/JS/正则表达式.md
@@ -14,9 +14,17 @@ tags: JS
 
 注意正则有一些字符类匹配，很多时候大家都是使用字符类匹配。这个要记住。
 
-![](/assets/import4.png)重复匹配符也要注意，这个也要记住，一看就能知道表达的匹配范围。
+![](/assets/import4.png)
 
-![](/assets/import5.png)![](/assets/import6.png)其他的东西就直接在博文上看就可以了。
+重复匹配符也要注意，这个也要记住，一看就能知道表达的匹配范围。
 
-下面有一个导图，记住这个导图你就理解了。![](/assets/2805273310-5427ad34d27ef.gif)
+![](/assets/import5.png)
+
+![](/assets/import6.png)
+
+其他的东西就直接在博文上看就可以了。
+
+下面有一个导图，记住这个导图你就理解了。
+
+![](/assets/2805273310-5427ad34d27ef.gif)
 
