--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -101,6 +101,7 @@ null===Object  //false
 在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符
 === 的比较方式。
 
+
 ![](/assets/==.png)
 
 
@@ -119,7 +120,8 @@ NaN === NaN  //false
 [1,2] === '1,2'  //false
 ```
 
-![](/assets/===.png)  
+![](/assets/===.png)
+
 **ToNumber**
 
 ```
@@ -212,8 +214,7 @@ console.log(2 + 1 + '3'); // '33'
 console.log('3' + 2 + 1); //'321'
 ```
 
-* **数字字符串之前存在数字中的正负号\(+/-\)时，会被转换成数字，同样，可以在数字前添加
-  ‘’，将数字转为字符串**
+* **数字字符串之前存在数字中的正负号\(+/-\)时，会被转换成数字，同样，可以在数字前添加‘’，将数字转为字符串**
 
 ```js
 console.log(typeof '3'); // string
