--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -62,7 +62,8 @@ let EventUtil = {
 
 在触发 DOM 上的某个事件时，会产生一个事件对象 event ，这个对象中包含着所有与事件有关的信息。包括导致事件的元素、事件的类型以及其他与特定事件相关的信息。例如，鼠标操作导致的事件对象中，会包含鼠标位置的信息，而键盘操作导致的事件对象中，会包含与按下的键有关的信息。所有浏览器都支持 event 对象，但支持方式不同。
 
-当然，在事件对象中IE也有不一样的地方。后面再区别，先看DOM2级事件对象。  
+当然，在事件对象中IE也有不一样的地方。后面再区别，先看DOM2级事件对象。
+
 ![](/assets/eventObj.png)
 
 在事件处理程序内部，对象 this 始终等于 currentTarget 的值，而 target 则只包含事件的实际目标。如果直接将事件处理程序指定给了目标元素，则 this 、 currentTarget 和 target 包含相同的值。。如果事件处理程序存在于按钮的父节点中（例如 document.body ），那么这些值是不相同的。
@@ -72,11 +73,12 @@ let EventUtil = {
 ![](/assets/enevt-ie.png)
 
 ### 事件类型
+
 ![](/assets/eventType1.png)
 
 这里面主要记住UI事件，大部分是window对象相关。
 
-### ![](/assets/eventType2.png)
+![](/assets/eventType2.png)
 
 ## 内存和性能优化
 
@@ -88,7 +90,7 @@ let EventUtil = {
 
 使用事件委托技术，与传统方法相比较，有如下优势：
 
-#### ![](/assets/eventProxy.png)
+![](/assets/eventProxy.png)
 
 #### 优化方案二：移除时间事件处理程序
 
