--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -107,7 +107,7 @@
 
 **情况三**：一些在特定环境下使用的居中操作
 
-* 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行业元素。比如加上table和table-cell属性。
+* 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行内元素。比如加上table和table-cell属性。
 
 **方法六：inline-block + vertical-align**
 ```html
