--- a/CSS/水平居中.md
+++ b/CSS/水平居中.md
@@ -16,7 +16,7 @@ text-algin:center
 display:inline-block
 ```
 
-inline-block属性是无法让元素水平居中，他的关键之处要在元素的父容器中设置text-align的属性为“center”，这样才能达到效果著作权归作者所有。
+inline-block属性是无法让元素水平居中，他的关键之处要在元素的父容器中设置text-align的属性为“center”，这样才能达到效果
 ### float
 浮动50%
 
