--- a/CSS/斜切角实现.md
+++ b/CSS/斜切角实现.md
@@ -88,7 +88,7 @@ linear-gradient([ [ [ <angle> | to [top | bottom] || [left | right] ],]? <color-
 ![](/assets/deg-length.png)
 
 * 如果想要文章开头的那种图片效果，渐变的长度应该为块元素高度除以根号2。
-* 还有一个坑就是想要对称的两个角或者对称的四个角都有这个切角效果，使用了`background-size: 50% 50% ;`,这个计算如果块元素高度为复数时，没有什么问题，但是为单数时，50%的计算会有小数，然后再计算之后约去小数部分，在元素高度小于2倍的渐变长度根号2倍时，导致中间部分会有一条缝。
+* 还有一个坑就是想要对称的两个角或者对称的四个角都有这个切角效果，使用了`background-size: 50% 50% ;`,这个计算如果块元素高度为复数时，没有什么问题，但是为奇数时，50%的计算会有小数，然后再计算之后约去小数部分，在元素高度小于2倍的渐变长度根号2倍时，导致中间部分会有一条缝。
 
 ![](/assets/deg2.png)
 
