--- a/ES6/2、变量解构赋值.md
+++ b/ES6/2、变量解构赋值.md
@@ -1,6 +1,6 @@
-##变量的解构赋值
+## 变量的解构赋值
 这一知识点 理解起来很费劲，尽量多看几遍
-###对象的解构赋值
+### 对象的解构赋值
 
 
 ```js
@@ -28,7 +28,7 @@ foo // error: foo is not defined
 ```
 上面代码中，foo是匹配的模式，baz才是变量。真正被赋值的是变量baz，而不是模式foo。
 
-####对象的解构赋值的嵌套
+#### 对象的解构赋值的嵌套
 
 数组一样，解构也可以用于嵌套结构的对象
 
@@ -69,15 +69,89 @@ let x;
 ({x} = {x: 1});
 ```
 
-####4 数值和布尔值的解构赋值
+#### 4 数值和布尔值的解构赋值
 
 数值和布尔值的包装对象都有toString属性,解构赋值时，如果等号右边是数值和布尔值，则会先转为对象。
-####5.函数参数的解构赋值
+#### 5.函数参数的解构赋值
 函数的参数也可以使用解构赋值,参数会被解析为变量
-####6.圆括号的问题
+#### 6.圆括号的问题
 尽量不使用圆括号。
 可以使用圆括号的情况只有一种：赋值语句的非模式部分，可以使用圆括号。
+```javascript
+[(b)] = [3]; // 正确
+({ p: (d) } = {}); // 正确
+[(parseInt.prop)] = [3]; // 正确
+```
+
+上面三行语句都可以正确执行，因为首先它们都是赋值语句，而不是声明语句；其次它们的圆括号都不属于模式的一部分。第一行语句中，模式是取数组的第一个成员，跟圆括号无关；第二行语句中，模式是`p`，而不是`d`；第三行语句与第一行语句的性质一致。
+
+不能使用圆括号的情况：
+
+1）变量声明语句
+
+```javascript
+// 全部报错
+let [(a)] = [1];
+
+let {x: (c)} = {};
+let ({x: c}) = {};
+let {(x: c)} = {};
+let {(x): c} = {};
+
+let { o: ({ p: p }) } = { o: { p: 2 } };
+```
+
+上面 6 个语句都会报错，因为它们都是变量声明语句，模式不能使用圆括号。
+
+（2）函数参数
+
+函数参数也属于变量声明，因此不能带有圆括号。
+
+```javascript
+// 报错
+function f([(z)]) { return z; }
+// 报错
+function f([z,(x)]) { return x; }
+```
+
+（3）赋值语句的模式
+
+```javascript
+// 全部报错
+({ p: a }) = { p: 42 };
+([a]) = [5];
+```
+
+上面代码将整个模式放在圆括号之中，导致报错。
+
+```javascript
+// 报错
+[({ p: a }), { x: c }] = [{}, {}];
+```
+
+上面代码将一部分模式放在圆括号之中，导致报错。
 
 
-####7.解构解析用途
-交换变量的值，从函数返回多个值，函数参数的定义，提取JSON数据，函数参数的默认值，遍历Map结构，输入模块的指定方法
+
+#### 7.解构解析用途
+
+交换变量的值
+```javascript
+let x = 1;
+let y = 2;
+
+[x, y] = [y, x];
+```
+
+
+从函数返回多个值，
+
+函数参数的定义，
+
+提取JSON数据，
+
+函数参数的默认值，
+
+遍历Map结构，
+
+输入模块的指定方法
