--- a/ES6/6、函数扩展.md
+++ b/ES6/6、函数扩展.md
@@ -1,10 +1,17 @@
 ## 函数扩展
+新特性介绍
 
-### 
-1、函数默认值
+### 可以指定函数默认值
 `function text (x, y='string'){    }`
-默认值之后的变量必须是带默认值的
-2、rest参数`...`将变量转换为一个数组
+默认值之后的变量必须是带默认值的，有一个要注意的点，参数变量`x`是默认声明的，在函数体中，不能用`let`或`const`再次声明，否则会报错。
+
+参数默认值是惰性求值的。
+
+### 与解构赋值默认值结合使用
+
+
+
+### rest参数`...`将变量转换为一个数组
 `function test(...arg){    }`
 rest 参数搭配的变量是一个数组，该变量将多余的参数放入数组中。
 3、扩展运算符`...[array]` 将数组拆解成单个
