--- a/ES6/4、数值扩展.md
+++ b/ES6/4、数值扩展.md
@@ -1,12 +1,151 @@
-##数值扩展
+## 数值扩展
 
-###API方法
+### API方法
+
+#### 更改
+
+- ES6 将全局方法`parseInt()`和`parseFloat()`，移植到`Number`对象上面，行为完全保持不变。
+
+#### Number对象更改
+
+
 1、`Number.isFinite()`用来检查一个数值是否为有限的（finite）
+
 2、`Number.isNaN()`用来检查一个值是否为NaN.
-3、`Number.isInteger()`用来判断一个数是否为整数。s
-4、`Number.MAX_SAFE_INTEGER`表示最大数上限， `Number.MIN_SAFE_INTEGER`表示最大数上限， `Number.issafeInteger`则是用来判断一个整数是否落在这个范围之内。 
-5、`Math.trunc()`用来向下取整。
-6、`Math.sign()`用来判断正、负、零。
-7、`Math.cbrt()`求立方根
-8、三角函数、对数等方法。
+
+3、`Number.isInteger()`用来判断一个数是否为整数。
+
+4、`Number.MAX_SAFE_INTEGER`表示最大数上限， `Number.MIN_SAFE_INTEGER`表示最大数上限， `Number.issafeInteger`则是用来判断一个整数是否落在这个范围之内。
+
+#### Math对象新增API
+
+##### 1、`Math.trunc()`用来向下取整。
+```javascript
+Math.trunc(4.1) // 4
+Math.trunc(4.9) // 4
+Math.trunc(-4.1) // -4
+Math.trunc(-4.9) // -4
+Math.trunc(-0.1234) // -0
+```
+
+对于没有部署这个方法的环境，可以用下面的代码模拟。
+```javascript
+Math.trunc = Math.trunc || function(x) {
+  return x < 0 ? Math.ceil(x) : Math.floor(x);
+};
+```
+
+
+##### 2、`Math.sign()`用来判断正、负、零。
+* 参数为正数，返回`+1`；
+* 参数为负数，返回`-1`；
+* 参数为 0，返回`0`；
+* 参数为-0，返回`-0`;
+* 其他值，返回`NaN`。
+
+```javascript
+Math.trunc(4.1) // 4
+Math.trunc(4.9) // 4
+Math.trunc(-4.1) // -4
+Math.trunc(-4.9) // -4
+Math.trunc(-0.1234) // -0
+```
+如果参数是非数值，会自动转为数值。对于那些无法转为数值的值，会返回`NaN`。
+
+对于没有部署这个方法的环境，可以用下面的代码模拟。
+
+```javascript
+Math.sign = Math.sign || function(x) {
+  x = +x; // convert to a number
+  if (x === 0 || isNaN(x)) {
+    return x;
+  }
+  return x > 0 ? 1 : -1;
+};
+```
+
+
+
+##### 3、`Math.cbrt()`求立方根
+
+对于没有部署这个方法的环境，可以用下面的代码模拟。
+
+```javascript
+Math.cbrt = Math.cbrt || function(x) {
+  var y = Math.pow(Math.abs(x), 1/3);
+  return x < 0 ? -y : y;
+};
+```
+
+
+##### 4、`Math.clz32`方法返回一个数的 32 位无符号整数形式有多少个前导 0。
+
+
+##### 5、`Math.imul`方法返回两个数以 32 位带符号整数形式相乘的结果，返回的也是一个 32 位的带符号整数。
+
+##### 6、`Math.fround`方法返回一个数的32位单精度浮点数形式。
+
+##### 7、`Math.hypot`方法返回所有参数的平方和的平方根。
+
+以下新增对数方法
+
+##### 1、`Math.expm1(x)`返回 e ^x - 1，即`Math.exp(x) - 1`。
+对于没有部署这个方法的环境，可以用下面的代码模拟。
+
+```javascript
+Math.expm1 = Math.expm1 || function(x) {
+  return Math.exp(x) - 1;
+};
+```
+
+
+##### 2、`Math.log1p(x)`方法返回`1 + x`的自然对数，即`Math.log(1 + x)`。如果`x`小于-1，返回`NaN`。
+
+##### 3、`Math.log10(x)`返回以 10 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
+对于没有部署这个方法的环境，可以用下面的代码模拟。
+
+```javascript
+Math.log10 = Math.log10 || function(x) {
+  return Math.log(x) / Math.LN10;
+};
+```
+
+##### 4、`Math.log2(x)`返回以 2 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
+对于未实现的方法同上
+
+
+#### 新增双曲线函数方法
+
+* `Math.sinh(x)` 返回`x`的双曲正弦（hyperbolic sine）
+* `Math.cosh(x)` 返回`x`的双曲余弦（hyperbolic cosine）
+* `Math.tanh(x)` 返回`x`的双曲正切（hyperbolic tangent）
+* `Math.asinh(x)` 返回`x`的反双曲正弦（inverse hyperbolic sine）
+* `Math.acosh(x)` 返回`x`的反双曲余弦（inverse hyperbolic cosine）
+* `Math.atanh(x)` 返回`x`的反双曲正切（inverse hyperbolic tangent）
+
+#### 新增指数运算符
+
+ES2016 新增了一个指数运算符（`**`）。
+
+```javascript
+2 ** 2 // 4
+2 ** 3 // 8
+```
+
+指数运算符可以与等号结合，形成一个新的赋值运算符（`**=`）。
+
+```javascript
+let a = 1.5;
+a **= 2;
+// 等同于 a = a * a;
+
+let b = 4;
+b **= 3;
+// 等同于 b = b * b * b;
+```
+
+#####
+#####
+
+##### 4、三角函数、对数等方法。
 
