--- a/ES6/5、数组扩展.md
+++ b/ES6/5、数组扩展.md
@@ -1,6 +1,368 @@
-## 数组扩展
+# ES6数组扩展
 
-### API
+### 扩展运算符
+扩展运算符（spread）是三个点（`...`）。它好比 rest 参数的逆运算，将一个数组转为用逗号分隔的参数序列。
+
+#### 替代函数的 apply 方法
+由于扩展运算符可以展开数组，所以不再需要`apply`方法，将数组转为函数的参数了。
+
+```javascript
+// ES5 的写法
+function f(x, y, z) {
+  // ...
+}
+var args = [0, 1, 2];
+f.apply(null, args);
+
+// ES6的写法
+function f(x, y, z) {
+  // ...
+}
+let args = [0, 1, 2];
+f(...args);
+
+// ES5 的写法
+Math.max.apply(null, [14, 3, 77])
+
+// ES6 的写法
+Math.max(...[14, 3, 77])
+
+```
+
+#### 扩展运算符应用
+
+**（1）复制数组**
+
+ES5中的复制都是复制指针，属于浅复制，一般使用变通方法进行复制，在ES6中使用扩展运算符进行深度复制，这里还可以使用JSON的`parse`和`stringify`实现深度复制
+```javascript
+const a1 = [1, 2];
+// 写法一
+const a2 = [...a1];
+// 写法二
+const [...a2] = a1;
+```
+
+**（2）合并数组**
+
+```javascript
+const arr1 = ['a', 'b'];
+const arr2 = ['c'];
+const arr3 = ['d', 'e'];
+
+// ES5 的合并数组
+arr1.concat(arr2, arr3);
+// [ 'a', 'b', 'c', 'd', 'e' ]
+
+// ES6 的合并数组
+[...arr1, ...arr2, ...arr3]
+// [ 'a', 'b', 'c', 'd', 'e' ]
+```
+这两种方法都是浅拷贝，使用的时候需要注意。
+
+**（3）与解构赋值结合**
+扩展运算符可以与解构赋值结合起来，用于生成数组。
+
+```javascript
+const [first, ...rest] = [1, 2, 3, 4, 5];
+first // 1
+rest  // [2, 3, 4, 5]
+
+const [first, ...rest] = [];
+first // undefined
+rest  // []
+
+const [first, ...rest] = ["foo"];
+first  // "foo"
+rest   // []
+```
+如果将扩展运算符用于数组赋值，只能放在参数的最后一位，否则会报错。
+
+**（4）字符串**
+
+扩展运算符还可以将字符串转为真正的数组。
+
+```javascript
+[...'hello']
+// [ "h", "e", "l", "l", "o" ]
+```
+**（5）实现了 Iterator 接口的对象**
+
+任何 Iterator 接口的对象，都可以用扩展运算符转为真正的数组。
+
+对于Map，Set结构，Generator函数，只要具有Iterator接口的对象，都可以使用扩展运算符。
+
+## 新增API
+
+### `Array.from()`
+`Array.from`方法用于将两类对象转为真正的数组：类似数组的对象（array-like object）和可遍历（iterable）的对象（包括 ES6 新增的数据结构 Set 和 Map）。
+
+
+只要是部署了 Iterator 接口的数据结构，`Array.from`都能将其转为数组。
+```javascript
+let arrayLike = {
+    '0': 'a',
+    '1': 'b',
+    '2': 'c',
+    length: 3
+};
+
+// ES5的写法
+var arr1 = [].slice.call(arrayLike); // ['a', 'b', 'c']
+
+// ES6的写法
+let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
+```
+扩展运算符背后调用的是遍历器接口（`Symbol.iterator`），如果一个对象没有部署这个接口，就无法转换。`Array.from`方法还支持类似数组的对象。所谓类似数组的对象，本质特征只有一点，即必须有`length`属性。因此，任何有`length`属性的对象，都可以通过`Array.from`方法转为数组，而此时扩展运算符就无法转换。
+
+```javascript
+Array.from({ length: 3 });
+// [ undefined, undefined, undefined ]
+```
+
+`Array.from`还可以接受第二个参数，作用类似于数组的`map`方法，用来对每个元素进行处理，将处理后的值放入返回的数组。
+
+如果`map`函数里面用到了`this`关键字，还可以传入`Array.from`的第三个参数，用来绑定`this`。
+
+
+返回各种数据的类型。
+```javascript
+function typesOf () {
+  return Array.from(arguments, value => typeof value)
+}
+typesOf(null, [], NaN)
+// ['object', 'object', 'number']
+```
+
+### `Array.of()`
+
+`Array.of`方法用于将一组值，转换为数组。这个方法的主要目的，是弥补数组构造函数`Array()`的不足。因为参数个数的不同，会导致`Array()`的行为有差异。
+
+`Array.of`总是返回参数值组成的数组。如果没有参数，就返回一个空数组。
+
+```javascript
+Array.of(3, 11, 8) // [3,11,8]
+Array.of(3) // [3]
+Array.of(3).length // 1
+```
+```javascript
+Array() // []
+Array(3) // [, , ,]
+Array(3, 11, 8) // [3, 11, 8]
+```
+`Array`方法没有参数、一个参数、三个参数时，返回结果都不一样。只有当参数个数不少于 2 个时，`Array()`才会返回由参数组成的新数组。参数个数只有一个时，实际上是指定数组的长度。
+
+### 数组实例的 copyWithin()
+
+数组实例的`copyWithin`方法，在当前数组内部，将指定位置的成员复制到其他位置（会覆盖原有成员），然后返回当前数组。也就是说，使用这个方法，会修改当前数组。
+
+```javascript
+Array.prototype.copyWithin(target, start = 0, end = this.length)
+```
+
+它接受三个参数。
+* target（必需）：从该位置开始替换数据。如果为负值，表示倒数。
+* start（可选）：从该位置开始读取数据，默认为 0。如果为负值，表示倒数。
+* end（可选）：到该位置前停止读取数据，默认等于数组长度。如果为负值，表示倒数。
+
+这三个参数都应该是数值，如果不是，会自动转为数值。
+
+```javascript
+[1, 2, 3, 4, 5].copyWithin(0, 3)
+// [4, 5, 3, 4, 5]
+```
+
+### 数组实例的 find() 和 findIndex()
+
+数组实例的`find`方法，用于找出第一个符合条件的数组成员。它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为`true`的成员，然后返回该成员。如果没有符合条件的成员，则返回`undefined`。
+
+```javascript
+[1, 4, -5, 10].find((n) => n < 0)
+```
+
+数组实例的`findIndex`方法的用法与`find`方法非常类似，返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回`-1`。
+
+这两个方法都可以接受第二个参数，用来绑定回调函数的`this`对象。
+
+### 数组实例的fill()
+
+`fill`方法使用给定值，填充一个数组。
+`fill`方法还可以接受第二个和第三个参数，用于指定填充的起始位置和结束位置。
+
+```javascript
+['a', 'b', 'c'].fill(7, 1, 2)
+// ['a', 7, 'c']
+```
+如果填充的类型为对象，那么被赋值的是同一个内存地址的对象，而不是深拷贝对象。
+
+### 数组实例的includes()
+
+`Array.prototype.includes`方法返回一个布尔值，表示某个数组是否包含给定的值，与字符串的`includes`方法类似。ES2016 引入了该方法。
+
+该方法的第二个参数表示搜索的起始位置，默认为`0`。如果第二个参数为负数，则表示倒数的位置，如果这时它大于数组长度（比如第二个参数为`-4`，但数组长度为`3`），则会重置为从`0`开始。
+
+
+注意：
+**indexOf使用的是`===`，会对`NaN`判断有问题**
+```javascript
+[NaN].indexOf(NaN)
+// -1
+```
+`includes`使用的是不一样的判断算法，就没有这个问题。
+
+```javascript
+[NaN].includes(NaN)
+// true
+```
+
+* Map 结构的`has`方法，是用来查找键名的，比如`Map.prototype.has(key)`、`WeakMap.prototype.has(key)`、`Reflect.has(target, propertyKey)`。
+* Set 结构的`has`方法，是用来查找值的，比如`Set.prototype.has(value)`、`WeakSet.prototype.has(value)`。
+
+
+
+### 数组实例的entries() keys(), values()
+ES6 提供三个新的方法------`entries()`，`keys()`和`values()`------用于遍历数组。它们都返回一个遍历器对象（详见《Iterator》一章），可以用`for...of`循环进行遍历，唯一的区别是`keys()`是对键名的遍历、`values()`是对键值的遍历，`entries()`是对键值对的遍历。
+
+其实我个人觉得这个就和ES6中提供的对象遍历方法是配套的。
+
+
+### 数组实例的 flat()，flatMap()
+数组的成员有时还是数组，`Array.prototype.flat()`用于将嵌套的数组"拉平"，变成一维的数组。该方法返回一个新数组，对原数据没有影响。
+
+```javascript
+[1, 2, [3, 4]].flat()
+// [1, 2, 3, 4]
+```
+
+`flat()`默认只会"拉平"一层，如果想要"拉平"多层的嵌套数组，可以将`flat()`方法的参数写成一个整数，表示想要拉平的层数，默认为1。
+
+如果不管有多少层嵌套，都要转成一维数组，可以用`Infinity`关键字作为参数。
+
+```javascript
+[1, [2, [3]]].flat(Infinity)
+// [1, 2, 3]
+```
+
+`flatMap()`方法对原数组的每个成员执行一个函数（相当于执行`Array.prototype.map()`），然后对返回值组成的数组执行`flat()`方法。该方法返回一个新数组，不改变原数组。
+
+```javascript
+// 相当于 [[2, 4], [3, 6], [4, 8]].flat()
+[2, 3, 4].flatMap((x) => [x, x * 2])
+// [2, 4, 3, 6, 4, 8]
+```
+
+`flatMap()`只能展开一层数组。
+
+
+### 数组空位的处理
+
+
+ES5 对空位的处理，已经很不一致了，大多数情况下会忽略空位。
+* `forEach()`, `filter()`, `reduce()`, `every()` 和`some()`都会跳过空位。
+* `map()`会跳过空位，但会保留这个值
+* `join()`和`toString()`会将空位视为`undefined`，而`undefined`和`null`会被处理成空字符串。
+```javascript
+// forEach方法
+[,'a'].forEach((x,i) => console.log(i)); // 1
+
+// filter方法
+['a',,'b'].filter(x => true) // ['a','b']
+
+// every方法
+[,'a'].every(x => x==='a') // true
+
+// reduce方法
+[1,,2].reduce((x,y) => x+y) // 3
+
+// some方法
+[,'a'].some(x => x !== 'a') // false
+
+// map方法
+[,'a'].map(x => 1) // [,1]
+
+// join方法
+[,'a',undefined,null].join('#') // "#a##"
+
+// toString方法
+[,'a',undefined,null].toString() // ",a,,"
+```
+
+
+
+ES6 则是明确将空位转为`undefined`。
+
+`Array.from`方法会将数组的空位，转为`undefined`，也就是说，这个方法不会忽略空位。
+
+```javascript
+Array.from(['a',,'b'])
+// [ "a", undefined, "b" ]
+```
+
+扩展运算符（`...`）也会将空位转为`undefined`。
+
+```javascript
+[...['a',,'b']]
+// [ "a", undefined, "b" ]
+```
+
+`copyWithin()`会连空位一起拷贝。
+
+```javascript
+[,'a','b',,].copyWithin(2,0) // [,"a",,"a"]
+```
+
+`fill()`会将空位视为正常的数组位置。
+
+```javascript
+new Array(3).fill('a') // ["a","a","a"]
+```
+
+`for...of`循环也会遍历空位。
+
+```javascript
+let arr = [, ,];
+for (let i of arr) {
+  console.log(1);
+}
+// 1
+// 1
+```
+
+上面代码中，数组`arr`有两个空位，`for...of`并没有忽略它们。如果改成`map`方法遍历，空位是会跳过的。
+
+`entries()`、`keys()`、`values()`、`find()`和`findIndex()`会将空位处理成`undefined`。
+
+```javascript
+// entries()
+[...[,'a'].entries()] // [[0,undefined], [1,"a"]]
+
+// keys()
+[...[,'a'].keys()] // [0,1]
+
+// values()
+[...[,'a'].values()] // [undefined,"a"]
+
+// find()
+[,'a'].find(x => true) // undefined
+
+// findIndex()
+[,'a'].findIndex(x => true) // 0
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 1、`Array.of()`将一组数剧变量转化为一组数组。
 2、`Array.from()`将两类对象转为真正的数组：类似数组的对象（array-like object）和可遍历（iterable）的对象（包括ES6新增的数据结构Set和Map）。
 3、`fill()`填充。
