--- a/ES6/7、对象扩展.md
+++ b/ES6/7、对象扩展.md
@@ -1,8 +1,219 @@
 ## 对象扩展
 
-1、简介表示法
-2、属性表达式
+### 属性简介表示法
 
-### 新增API
-1、`Object.is( a, b)`比较
-2、`Object.assign(a, b)`拷贝。只拷贝自身对象的属性，继承补考呗
+
+### 属性表达式
+属性名表达式如果是一个对象，默认情况下会自动将对象转为字符串`[object Object]`，这一点要特别小心。
+
+### `Object.is( a, b)`
+ES6 提出"Same-value equality"（同值相等）算法，用来解决这个问题。`Object.is`就是部署这个算法的新方法。它用来比较两个值是否严格相等，与严格比较运算符（===）的行为基本一致。
+
+
+不同之处只有两个：一是`+0`不等于`-0`，二是`NaN`等于自身。
+
+```javascript
++0 === -0 //true
+NaN === NaN // false
+
+Object.is(+0, -0) // false 
+Object.is(NaN, NaN) // true
+```
+
+
+### Object.assign()
+`Object.assign`方法用于对象的合并，将源对象（source）的所有可枚举属性，复制到目标对象（target）。
+
+```javascript
+const target = { a: 1 };
+
+const source1 = { b: 2 };
+const source2 = { c: 3 };
+
+Object.assign(target, source1, source2);
+target // {a:1, b:2, c:3}
+```
+
+`Object.assign`方法的第一个参数是目标对象，后面的参数都是源对象。
+
+
+**注意：** 如果目标对象与源对象有同名属性，或多个源对象有同名属性，则后面的属性会覆盖前面的属性。
+
+* 如果只有一个参数，`Object.assign`会直接返回该参数。
+
+* 如果该参数不是对象，则会先转成对象，然后返回。
+
+```javascript
+typeof Object.assign(2) // "object"
+```
+
+由于`undefined`和`null`无法转成对象，所以如果它们作为参数，就会报错。
+
+```javascript
+Object.assign(undefined) // 报错
+Object.assign(null) // 报错
+```
+注意：这里如果非对象参数出现在源对象的位置（即非首参数），那么处理规则有所不同。首先，这些参数都会转成对象，如果无法转成对象，就会跳过。这意味着，如果`undefined`和`null`不在首参数，就不会报错。
+
+```javascript
+let obj = {a: 1};
+Object.assign(obj, undefined) === obj // true
+Object.assign(obj, null) === obj // true
+```
+
+* 其他类型的值（即数值、字符串和布尔值）不在首参数，也不会报错。但是，除了字符串会以数组形式，拷贝入目标对象，其他值都不会产生效果。
+
+```javascript
+const v1 = 'abc';
+const v2 = true;
+const v3 = 10;
+
+const obj = Object.assign({}, v1, v2, v3);
+console.log(obj); // { "0": "a", "1": "b", "2": "c" }
+```
+
+`Object.assign`拷贝的属性是**有限制的，只拷贝源对象的自身属性（不拷贝继承属性），也不拷贝不可枚举的属性**（`enumerable: false`）。
+
+#### **注意点：**
+
+**（1）浅拷贝**
+
+**（2）同名属性的替换**
+
+**（3）数组的处理**
+
+`Object.assign`可以用来处理数组，但是会把数组视为对象。
+
+```javascript
+Object.assign([1, 2, 3], [4, 5])
+// [4, 5, 3]
+```
+
+上面代码中，`Object.assign`把数组视为属性名为 0、1、2 的对象，因此源数组的 0 号属性`4`覆盖了目标数组的 0 号属性`1`。
+
+**（4）取值函数的处理**
+
+`Object.assign`只能进行值的复制，如果要复制的值是一个取值函数，那么将求值后再复制。
+
+```javascript
+const source = {
+  get foo() { return 1 }
+};
+const target = {};
+
+Object.assign(target, source)
+// { foo: 1 }
+```
+
+上面代码中，`source`对象的`foo`属性是一个取值函数，`Object.assign`不会复制这个取值函数，只会拿到值以后，将这个值复制过去。
+
+#### 常见用途
+
+**（1）为对象添加属性**
+
+**（2）为对象添加方法**
+
+**（3）克隆对象**
+
+不过，采用这种方法克隆，只能克隆原始对象自身的值，不能克隆它继承的值。如果想要保持继承链，可以采用下面的代码。
+
+```javascript
+function clone(origin) {
+  let originProto = Object.getPrototypeOf(origin);
+  return Object.assign(Object.create(originProto), origin);
+}
+```
+
+**（4）合并多个对象**
+
+**（5）为属性指定默认值**
+
+使用的是assign方法的同名属性的值，后者会覆盖前者
+
+
+### 对象的遍历
+参考之前的各种遍历方法对比
+
+
+### `Object.getOwnPropertyDescriptors`
+
+
+### `__proto__`, `Object.setPrototypeOf()` , `Object.getPrototypeOf()`
+
+
+### super关键字
+
+我们知道，`this`关键字总是指向函数所在的当前对象，ES6 又新增了另一个类似的关键字`super`，指向当前对象的原型对象。
+```javascript
+const proto = {
+  foo: 'hello'
+};
+
+const obj = {
+  foo: 'world',
+  find() {
+    return super.foo;
+  }
+};
+
+Object.setPrototypeOf(obj, proto);
+obj.find() // "hello"
+```
+
+**注意，`super`关键字表示原型对象时，只能用在对象的方法之中，用在其他地方都会报错。**
+
+
+
+### Object.keys()，Object.values()，Object.entries()
+
+* `Object.values`会过滤属性名为 Symbol 值的属性。
+
+* 如果`Object.values`方法的参数是一个字符串，会返回各个字符组成的一个数组。
+
+* `Object.entries`方法的另一个用处是，将对象转为真正的`Map`结构。
+
+
+
+### 对象的扩展运算符
+
+对象的扩展运算符（`...`）用于取出参数对象的所有可遍历属性，拷贝到当前对象之中。
+
+如果想完整克隆一个对象，还拷贝对象原型的属性，可以采用下面的写法。
+
+```javascript
+// 写法一
+const clone1 = {
+  __proto__: Object.getPrototypeOf(obj),
+  ...obj
+};
+
+// 写法二
+const clone2 = Object.assign(
+  Object.create(Object.getPrototypeOf(obj)),
+  obj
+);
+
+// 写法三
+const clone3 = Object.create(
+  Object.getPrototypeOf(obj),
+  Object.getOwnPropertyDescriptors(obj)
+)
+```
+
+上面代码中，写法一的`__proto__`属性在非浏览器的环境不一定部署，因此推荐使用写法二和写法三。
+
+**扩展运算符可以用于合并两个对象。**
+
+```javascript
+let ab = { ...a, ...b };
+// 等同于
+let ab = Object.assign({}, a, b);
+```
+
+
+
+
+
+
+
+
