--- a/ES6/7、对象扩展.md
+++ b/ES6/7、对象扩展.md
@@ -134,11 +134,10 @@ function clone(origin) {
 ### 对象的遍历
 参考之前的各种遍历方法对比
 
+### Object.getOwnPropertyDescriptors
 
-### `Object.getOwnPropertyDescriptors`
 
-
-### `__proto__`, `Object.setPrototypeOf()` , `Object.getPrototypeOf()`
+### __proto__, Object.setPrototypeOf() , Object.getPrototypeOf()
 
 
 ### super关键字
