--- a/JS/继承.md
+++ b/JS/继承.md
@@ -151,16 +151,16 @@ console.log(cat instanceof Cat); // true
 2. 无法获取父类不可枚举的方法（不可枚举方法，不能使用for in 访问到）
 
 ### 5、组合继承
-结合原型继承和构造函数继承两种方法，通过调用父类构造，继承父类的属性并保留传参的优点，然后通过将父类实例作为子类原型，实现函数复用。
+结合原型继承和构造函数继承两种方法，使用原型链实现对原型属性和方法的继承，使用构造函数来实现对实例属性的继承。通过调用父类构造，继承父类的属性并保留传参的优点，然后通过将父类实例作为子类原型，实现函数复用。
 
 ```js
 /** 5、组合继承 **/
 function Cat(name) {
-    Animal.call(this);
+    Animal.call(this);          // 第二次调用父类构造函数
     this.name = name || 'Tom';
 }
 
-Cat.prototype = new Animal();
+Cat.prototype = new Animal();  // 第一次调用父类构造函数
 Cat.prototype.constructor = Cat;  //要修改函数的执行
 
 // Test Code
