--- a/problem/04-ES6.md
+++ b/problem/04-ES6.md
@@ -10,6 +10,7 @@
 6. **es6 generator 是什么，async/await 实现原理**
 7. **ES6和node的commonjs模块化规范区别**
 8. **箭头函数，以及它的this**
+9. **babel是如何将es6代码编译成es5的**
 
 
 ## 答案整理
@@ -100,10 +101,16 @@
     [箭头函数中的this](https://xia-ao.gitbook.io/notes/es6/6-han-shu-kuo-zhan#jian-tou-han-shu-shi-yong-zhu-yi-dian)
 
 
+9. **babel是如何将es6代码编译成es5的**
 
+    Babel的功能非常纯粹，以字符串的形式将源代码传给它，它就会返回一段新的代码字符串（以及sourcemap）。他既不会运行你的代码，也不会将多个代码打包到一起，它就是个编译器，输入语言是ES6+，编译目标语言是ES5。
 
+    Babel的编译过程跟绝大多数其他语言的编译器大致同理，分为三个阶段：
+    1. **解析** ：将代码字符串解析成抽象语法树
+    2. **变换** ：对抽象语法树进行变换操作
+    3. **再建** ：根据变换后的抽象语法树再生成代码字符串
 
-
+    [详细介绍-百度外卖前端](https://zhuanlan.zhihu.com/p/27289600)
 
 
 
