--- a/JS/设计模式.md
+++ b/JS/设计模式.md
@@ -7,13 +7,62 @@
 实现单例模式：要实现一个标准的单例模式并不复杂，无非是用一个变量来标志当前是否已经为某个类创建过对象，如果是，则在下一次获取该类的实例时，直接返回之前创建的对象。
 
 
+## 发布-订阅（观察者） 模式
+发布---订阅模式的优点非常明显，一为时间上的解耦，二为对象之间的解耦
+
+创建订阅者本身要消耗一定的时间和内存，而且当你订阅一个消息后，也许此消息最后都未发生，但这个订阅者会始终存在于内存中。另外，发布---订阅模式虽然可以弱化对象之间的联系，但如果过度使用的话，对象和对象之间的必要联系也将被深埋在背后，会导致程序难以跟踪维护和理解。特别是有多个发布者和订阅者嵌套到一起的时候，要跟踪一个 bug 不是件轻松的事情
+
+在Vue的双向数据绑定上面，使用的就是发布订阅模式。
 
 
+## 适配器
+
+适配器模式的作用是解决两个软件实体间的接口不兼容的问题。
+
+## 代理模式
+
+代理模式的关键是，当客户不方便直接访问一个对象或者不满足需要的时候，提供一个替身对象来控制对这个对象的访问，客户实际上访问的是替身对象。替身对象对请求做出一些处理之后，再把请求转交给本体对象
+
+保护代理和虚拟代理  
+* 保护代理 于对象应该有不同访问权限的情况。
+* 虚拟代理 把一些开销很大的对象，延迟到真正需要它的时候才去创建，**虚拟代理实现图片预加载**
+* 防火墙代理：控制网络资源的访问，保护主题不让"坏人"接近
+* 远程代理：为一个对象在不同的地址空间提供局部代表，在 Java 中，远程代理可以是另一个虚拟机中的对象
+* 智能引用代理：取代了简单的指针，它在访问对象时执行一些附加操作，比如计算一个对象被引用的次数
+* 写时复制代理：通常用于复制一个庞大对象的情况。写时复制代理延迟了复制的过程，当对象被真正修改时，才对它进行复制操作。写时复制代理是虚拟代理的一种变体， DLL（操作系统中的动态链接库）是其典型运用场景
 
 
+代理和本体接口一致性
+
+使用场景：
+* 图片预加载，
+* 合并HTTP请求 ，
+* 惰性加载，
+* 缓存代理, 计算结果缓存， ajax请求缓存
 
 
+## 迭代器模式
+目前语言已经实现了多种迭代方式，实际使用中是迭代器模式使用较少
+
+### 内部迭代器
+内部迭代器在调用的时候非常方便，外界不用关心迭代器内部的实现，跟迭代器的交互也仅  
+仅是一次初始调用，但这也刚好是内部迭代器的缺点。由于内部迭代器的迭代规则已经被提前规  
+定，上面的 each 函数就无法同时迭代 2 个数组了
+
+### 外部迭代器
+外部迭代器必须显式地请求迭代下一个元素，外部迭代器增加了一些调用的复杂度，但相对也增强了迭代器的灵活性，我们可以手工控制迭代的过程或者顺序。
+
+## 中介者模式
+
+面向对象设计鼓励将行为分布到各个对象中，把对象划分成更小的粒度，有助于增强对象的可复用性，但由于这些细粒度对象之间的联系激增，又有可能会反过来降低它们的可复用性
+
+中介者模式的作用就是解除对象与对象之间的紧耦合关系。增加一个中介者对象后，所有的相关对象都通过中介者对象来通信，而不是互相引用，所以当一个对象发生改变时，只需要通知中介者对象即可。中介者使各对象之间耦合松散，而且可以独立地改变它们之间的交互。中介者模式使网状的多对多关系变成了相对简单的一对多关系
+
+![](../assets/zhongjiezhe.png)
+
+举例现实中的例子： 机场指挥塔
 
 
+## 装饰者模式
 
 
