'前端指南完善'

--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -230,6 +230,18 @@ consol.log('a' * 'sd'); //NaN
 console.log('A' - 'B'); // NaN
 ```
 
+### 为什么0.1+ 0.2 != 0.3
+在JS中,采用的是双精度版本（64位），十进制的数都是使用二进制表示的，0.1在二进制中表示为
+```js
+0.1 = 2^-4 * 1.10011(0011)  // (0011) 表示循环
+```
+所以0.1表示的二进制与0.2表示的二进制相加，在转化为十进制就变成了0.30000000000000004。
+
+**解决方案**：`parseFloat((0.1 + 0.2).toFixed(10))`
+
+
+
+
 ### 给基本类型数据添加属性，不报错，但取值时是undefined
 
 ```js
@@ -292,3 +304,15 @@ console.log(Function instanceof Object);//true
 console.log(Foo instanceof Function);//true 
 console.log(Foo instanceof Foo);//false
 ```
+
+### 判断类型 typeof 和 Object.prototype.toString.call()
+**typeof**
+
+`typeof` 除了null 返回Object，和函数返回function，其他都能正确返回，凡是引用类型返回都是Object。  
+`typeof`对null为什么返回Object,因为在 JS 的最初版本中，使用的是 32 位系统，为了性能考虑使用低位存储了变量的类型信息，000 开头代表是对象，然而 null 表示为全零，所以将它错误的判断为 object 。虽然现在的内部类型判断代码已经改变了，但是对于这个 Bug 却是一直流传下来。
+
+`Object.prototype.toString.call()`
+
+返回一个类似 `[Object Type]`的字符串
+
+
