--- a/problem/10-框架.md
+++ b/problem/10-框架.md
@@ -1,22 +1,32 @@
 
-32. AngularJS的文件管理及打包（包括模板打包及请求、JS的打包和请求等）
 
-33. AngularJS的JS模块管理及实践
+1. **三大框架区别**
+
+    每每提到这个问题，总是要吭叽吭叽好一会，主要是自己没有好好总结过，每次说的都比较碎。
+    angular是一个MVC框架，View,Model, Controller分离，具有数据双向绑定，采用的是脏检查机制（脏检查机制展开），具有指令操作，模块化管理，过滤器等优点，框架剧本的功能比较多，不想其他框架，需要结合插件来使用。适合用于开发管理系统，模块划分清楚的项目。
+
+    Vue是一个MVVM的框架，关注点在View和Model层，数据双向绑定，使用的defineProperty的get/set方法（弊端，后续可能会使用proxy替换），可以使用指令，过滤器等，相对来说，Vue比价适合写交互操作。默认将HTML，js，CSS写到一个文件里面，然后便于维护。适合小成本项目开发。
+
+    React是不满足于MVC框架的，主要是用于构建高性能的UI界面。最大的具有虚拟DOM，最大的特点就是组件化，因为React使用JSX的语法糖，所以React的组件化相对于其他两个框架，使用更加方便，等价语义化。没有指令化操作，只有单向数据绑定。React更适合用偏向UI操作，组件复用的项目。React的DOM操作成本相对更低一点。因为注重View层，使用起来更加灵活。适合大型项目。
+
+2. AngularJS的文件管理及打包（包括模板打包及请求、JS的打包和请求等）
+
+3. AngularJS的JS模块管理及实践
 
     答案：[AngularJS —— 使用模块组织你的代码](http://www.oschina.net/translate/angularjs-organizing-your-code-with-modules)
 
-34. 在你的Angular App页面里随意加一个JS文件，会有什么影响
+4. 在你的Angular App页面里随意加一个JS文件，会有什么影响
 
     答案：这个啥问题XX。
 
-35. AngularJS directive及自己如何定义directive
+5. AngularJS directive及自己如何定义directive
 
     答案：[AngularJS之directive](http://www.cnblogs.com/front-Thinking/p/4802035.html)
 
-36. AngularJS双向绑定的原理及实现
+6. AngularJS双向绑定的原理及实现
 
     答案：AngularJS数据绑定及AngularJS的工作机制，参考《AngularJS up and running》第203页，十三章第一节。简单说检查数据有无更新，仅在以下事件发生时，即：XHR请求、页面加载、用户交互事件等。
 
-52. AngularJS中依赖注入的理解
+7. AngularJS中依赖注入的理解
 
         答案：[Understanding Dependency Injection](https://github.com/angular/angular.js/wiki/Understanding-Dependency-Injection)
