--- a/problem/06-浏览器.md
+++ b/problem/06-浏览器.md
@@ -1,1 +1,26 @@
-16. **浏览器检测（能力检测、怪癖检测等）**
+## 浏览器
+
+
+1. 跨域，为什么JS会对跨域做出限制
+2. 前端安全：xss，csrf...
+3. 浏览器怎么加载页面的？script脚本阻塞有什么解决方法？defer和async的区别？
+4. 浏览器强缓存和协商缓存
+5. 浏览器的全局变量有哪些
+6. 浏览器同一时间能够从一个域名下载多少资源
+7. 按需加载，不同页面的元素判断标准
+8. web存储、cookies、localstroge等的使用和区别
+9. 浏览器的内核
+10. 如何实现缓存机制？（从200缓存，到cache到etag再到）
+11. 说一下200和304的理解和区别
+12. 什么是预加载、懒加载
+13. 一个 XMLHttpRequest 实例有多少种状态？
+14. dns解析原理，输入网址后如何查找服务器
+15. 服务器如何知道你？
+16. 浏览器渲染过程
+17. ie的某些兼容性问题
+18. session
+19. 拖拽实现
+20. 拆解url的各部分
+
+
+21. **浏览器检测（能力检测、怪癖检测等）**
