--- a/JS/正则表达式.md
+++ b/JS/正则表达式.md
@@ -28,3 +28,20 @@ tags: JS
 
 ![](/assets/2805273310-5427ad34d27ef.gif)
 
+
+### 正则分组（捕获）
+使用`(reg)`匹配，可以捕获分组中的内容，按照分组顺序，记为$1 $2 ...
+
+使用`(?:reg)`匹配，表示不是不捕获匹配项。
+
+```js
+'bar foo'.replace( /(...) (...)/, '$2 $1' )  // foo bar 
+```
+
+### 正向肯定/正向否定
+`x(?=reg)` 表示表达式x匹配项后面必须跟匹配项reg，但是匹配结果里面只有x的表达式。
+
+`x(?!reg)` 表示表达式x匹配项后面不能有匹配项reg，但是匹配结果里面只有x的表达式。
+
+### 贪婪与非贪婪
+正则默认是贪婪的，在量词后面使用`?`表示非贪婪的。
