--- a/JS/前端优化.md
+++ b/JS/前端优化.md
@@ -15,8 +15,19 @@ tags: JS
 
 
 以下为后续看到优化方法的补充：
-##
+
 
 1. 使用innerHTML、insertAdjacentHTML等属性操作DOM的时候，
 最好手工删除要被替换元素的所有事件处理程序的对象属性
-2.
+
+
+## 图片优化方法
+
+1. 图片懒加载。添加滚动事件，判断图片相对于浏览器窗口底部位置，如果小于阈值，则加载图片。
+2. 图片预加载。如果是相册，幻灯片等，上一张下一张预先加载好。
+3. css图片使用雪碧图，iconfont，base64， svg雪碧图等
+4. 图片过大，使用特殊编码，加载时先加载一张压缩特别厉害的图片，提高用户体验。
+5. 服务器端压缩，通过请求，设定尺寸。
+
+
+##
