--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -315,4 +315,15 @@ console.log(Foo instanceof Foo);//false
 
 返回一个类似 `[Object Type]`的字符串
 
+### delete
+**delete**用于删除某个对象的属性，**`delete`** 操作符会从某个对象上移除指定属性。和释放内存无关。
+* 如果删除属性的该对象原型链上有同名属性，delete只会删除自身属性，删除之后，对象会使用原型链上的属性。
+* 任何用`let`或`const`声明的属性不能够从它被声明的作用域中删除
+* 使用`var`声明的属性不能从全局作用域中或者函数作用域中删除
+* 不可设置的属性不能被删除
+### delete与splice区别
+以数组对象为例，
+1. `delete`只能删除指定数组元素的对象，数组的大小不改变，删除后位置空余，显示`undefined`，或者其他填充值。`splice`指定删除数组元素对象，数组大小发生变化。
+2. `delete`每次只能删除一个，`splice`一次可以删除一个或多个。
+
 
