--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -141,9 +141,22 @@
 </body>
 </html>
 ```
+**方法七：table-cell + vertical-align**
+```css
+.parent {
+    height: 500px;
+    background: #ccc;
+    display: table-cell;
+    vertical-align: middle;
+}
+.son {
+    background: #555555;
+}
+```
+**方法八：line-height**
 
-
-* `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。
+`line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。  
+并且该属性还会被子元素继承。
 
 ### 总结：
 
