--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -1,4 +1,4 @@
-### div+css布局较table优点
+## div+css布局较table优点
 1、符合W3C标准的，W3C标准提出**网页由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）**。结构清晰明了，结构、样式和行为分离，带来足够好的可维护性。
 
 2、布局更加灵活多样，能够通过样式选择来实现界面设计方面的更多要求。
@@ -9,7 +9,7 @@
 
 5、增加网页打开速度，增强用户体验。
 
-### 典型布局方法及其特点
+## 典型布局方法及其特点
 #### 静态布局（Static Layout）
 即传统Web设计，对于PC设计一个Layout，在屏幕宽高有调整时，使用横向和竖向的滚动条来查阅被遮掩部分；
 对于移动设备，单独设计一个布局，使用不同的域名如wap.或m.。
@@ -27,6 +27,30 @@
 可以把响应式布局看作是流式布局和自适应布局设计理念的融合。
 
 
+## 紧贴底部的页脚
+要求：页面分为头部，内容，页脚三部分，在内容没有撑满整个页面的时候，页脚还是显示在页面底部。
+```html
+<header>
+    <h1>Site name</h1>
+</header>
+<main>
+    <p>Bacon Ipsum dolor sit amet...
+    <!-- 从baconipsum.com那里复制一些示意文字过来 --></p>
+</main>
+<footer>
+    <p>© 2015 No rights reserved.</p>
+    <p>Made with ♥ by an anonymous pastafarian.</p>
+</footer>
+```
+```css
+body {
+    display: flex;
+    flex-flow: column;
+    min-height: 100vh;
+}
+main { flex: 1; }
+```
+区别： 和以前的方案是一样的，区别在于父元素的高度，使用min-height： 100vh， 以前的方案是height：100%，导致一个问题就是scroll事件不起作用，因为刚度已经100%了，使用vh视口高度，不会存在这个问题。
 ### 一些常用布局方法
 
 [自动省略布局](#1)
