--- a/JS/继承.md
+++ b/JS/继承.md
@@ -17,6 +17,8 @@ tags: JS
 function Animal(name) {
     // 属性
     this.name = name || 'Animal';
+    // 实例引用类型
+    this.type = [1];
     // 实例方法
     this.sleep = function () {
         console.log(this.name + '正在睡觉！');
@@ -44,6 +46,14 @@ cat.sleep();                        //cat正在睡觉！
 cat.eat('fish');                    //cat正在吃：fish
 console.log(cat instanceof Animal); //true
 console.log(cat instanceof Cat);    //true
+
+// 子类实例2
+var cat2 = new Cat();
+console.log(cat.type);   // [1]
+console.log(cat2.type);  // [1]
+cat.type.push(2);
+console.log(cat.type);   // [1,2]   cat.type 也被改变了
+console.log(cat2.type);  // [1,2]
 ```
 特点：
 
@@ -55,8 +65,19 @@ console.log(cat instanceof Cat);    //true
 
 1. 可以在Cat构造函数中，为Cat实例增加实例属性。如果要新增原型属性和方法，则必须放在`new Animal()`这样的语句之后执行不能放到构造器中
 2. 无法实现多继承
-3. 来自原型对象的引用属性是所有实例共享的
-4. 创建子类实例时，无法向父类构造函数传参
+3. 来自原型对象的引用属性是所有实例共享的，例如改变子类实例2改变父类某个引用属性，则子类实例1中也会相应改变。
+4. 创建子类实例时，无法向父类构造函数传参，即不能通过new Cat('cat')向父类构造函数中传递name，只能通过Cat.prototype.name='cat'向子类属性中添加name。
+
+#### 补充说明几个概念
+**多继承**  
+顾名思义，实现多个继承，就是一个子类需要继承多个父类。
+
+**来自原型对象的引用属性是所有实例共享的**  
+所有实例共享同一个来自原型对象的引用类型，一旦某个实例操作使引用类型发生变化，则其他实例上改引用类型也会变化。例如 cat2.type.push(2), cat2.type 和 cat.type 都变成了`[1,2]`。
+
+**向父类构造函数传参**  
+通过创建子类实例的过程中， 即不能通过new Cat('cat')向父类构造函数中传递name，
+
 
 ### 2、构造函数继承
 使用父类的构造函数来增强子类实例，等于是复制父类的实例属性给子类（没用到原型）
@@ -78,17 +99,16 @@ console.log(cat instanceof Cat);    // true
 console.log(cat.eat('fish'));       //报错Uncaught TypeError: cat.eat is not a function
 ```
 
- 特点：
-
+ 优点：
 1. 解决了1中，子类实例共享父类引用属性的问题
 2. 创建子类实例时，可以向父类传递参数
 3. 可以实现多继承（call多个父类对象）
 
- 缺点：
-
+缺点：
 1. 实例并不是父类的实例，只是子类的实例
 2. 只能继承父类的实例属性和方法，不能继承原型属性/方法
 3. 无法实现函数复用，每个子类都有父类实例函数的副本，影响性能
+4. 多继承时，对于同名属性，会发生覆盖。
 
 
 ### 3、实例继承
@@ -110,13 +130,11 @@ console.log(cat.eat('fish'));       //jack正在吃：fish
 console.log(cat instanceof Animal); // true
 console.log(cat instanceof Cat); // false
 ```
- 特点：
+特点：
+1. 不限制调用方式，不管子类实例创建时是`new 子类()`还是`子类()`,返回的对象具有相同的效果
 
-1. 不限制调用方式，不管是`new 子类()`还是`子类()`,返回的对象具有相同的效果
-
- 缺点：
-
-1. 实例是父类的实例，不是子类的实例
+缺点：
+1. **实例是父类的实例，不是子类的实例** 注意跟构造函数继承区别。
 2. 不支持多继承
 
 ### 4、拷贝继承
@@ -176,7 +194,7 @@ console.log(cat instanceof Cat);    // true
 
 1. 弥补了方式2的缺陷，可以继承实例属性/方法，也可以继承原型属性/方法
 2. 既是子类的实例，也是父类的实例
-3. 不存在引用属性共享问题
+3. **不存在引用属性共享问题**
 4. 可传参
 5. 函数可复用
 
@@ -193,6 +211,7 @@ function Cat(name) {
     this.name = name || 'Tom';
 }
 
+// 跟组合继承不同点在于通过一个立即执行函数作用域，在此作用域中创建一个临时类，临时类的原型= 父类原型（解决构造函数继承中不能继承父类原型方法属性问题），再将临时类的实例等于子类原型，因为是立即执行函数作用域，执行完就销毁了临时类的实例，也就避免了在组合继承里面保存了两份实例的问题。
 (function () {
     // 创建一个没有实例方法的类
     var Super = function () {
@@ -212,6 +231,7 @@ console.log(cat instanceof Cat);    //true
 ```
 
 完美方法，但是复杂。
+
 
 ### 7、使用ES6中的extends实现继承
 extends继承肯定是最好的继承方法，优先推荐使用.
@@ -248,6 +268,9 @@ console.log(cat instanceof Cat);    //true
 ```
 
 在实际应用中。
+
+### 总结
+7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承，node中毫无疑问优先使用extends继承，如果可以babel转码，也是优先推荐extends
 
 参考：[JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
 
