--- a/JS/继承.md
+++ b/JS/继承.md
@@ -211,7 +211,7 @@ function Cat(name) {
     this.name = name || 'Tom';
 }
 
-// 跟组合继承不同点在于通过一个立即执行函数作用域，在此作用域中创建一个临时类，临时类的原型= 父类原型（解决构造函数继承中不能继承父类原型方法属性问题），再将临时类的实例等于子类原型，因为是立即执行函数作用域，执行完就销毁了临时类的实例，也就避免了在组合继承里面保存了两份实例的问题。
+
 (function () {
     // 创建一个没有实例方法的类
     var Super = function () {
@@ -229,6 +229,7 @@ console.log(cat.eat());             //Tom正在吃：fish
 console.log(cat instanceof Animal); // true
 console.log(cat instanceof Cat);    //true
 ```
+跟组合继承不同点在于通过一个立即执行函数作用域，在此作用域中创建一个临时类，临时类的原型= 父类原型（解决构造函数继承中不能继承父类原型方法属性问题），再将临时类的实例等于子类原型，因为是立即执行函数作用域，执行完就销毁了临时类的实例，也就避免了在组合继承里面保存了两份实例的问题。
 
 完美方法，但是复杂。
 
