--- a/JS/递归.md
+++ b/JS/递归.md
@@ -56,3 +56,20 @@ var factorial = (function f(num){
 
 以上代码创建了一个名为 f\(\) 的命名函数表达式，然后将它赋值给变量 factorial 。即便把函数赋值给了另一个变量，函数的名字 f 仍然有效，所以递归调用照样能正确完成。这种方式在严格模式和非严格模式下都行得通。
 
+## 递归优化
+
+### 尾递归调用
+每次递归调用，内存都会保留调用栈，在函数最后一步return是调用函数，不会保留调用栈，所以能大大节省内存空间。
+```js
+function factorial (num,last=0){ 
+    if (num <= 1){  
+        return 1; 
+    } else {
+        return factorial(num-1, num*last); 
+    } 
+};
+```
+
+
+
+
